run also on push

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -1,13 +1,15 @@
 name: render
 
-# Controls when the action will run.
 on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
   schedule:
-    - cron:  '00 11 * * *'
-
+    # Runs "at 11:00 every day" (see https://crontab.guru)
+    - cron: '00 11 * * *'
 
 jobs: 
-  autoscrape:
+  render:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
