try with google api key secret

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -35,5 +35,5 @@ jobs:
     # Run R script
     - name: render
       env:
-        GARGLE_PASSWORD: ${{ secrets.GARGLE_PASSWORD }}
+        GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       run: Rscript render_zichten.R
