--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -36,4 +36,6 @@ jobs:
     - name: render
       env:
         GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+      run: |
+        R -e 'print(Sys.getenv("GOOGLE_API_KEY")'
       run: Rscript render_zichten.R
