--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -15,8 +15,8 @@ jobs:
 
     # Load repo and install R
     steps:
-    - uses: actions/checkout@master
-    - uses: r-lib/actions/setup-r@master
+    - uses: actions/checkout@main
+    - uses: r-lib/actions/setup-r@main
 
     # Set-up R
     - name: Install sys deps
